platform/infrastructure/policy-reporter/command-center/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kyverno-command-center
  namespace: kyverno
  labels:
    app.kubernetes.io/name: kyverno-command-center
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: kyverno-command-center
  ports:
    - name: http
      port: 80
      targetPort: http
