platform/infrastructure/policy-reporter/command-center/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kyverno-command-center
  namespace: kyverno
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: policy-reporter-ui-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  ingressClassName: nginx
  rules:
    - host: kyverno-cc.cryptophys.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kyverno-command-center
                port:
                  number: 80
  tls:
    - secretName: cryptophys-wildcard-tls
      hosts:
        - kyverno-cc.cryptophys.work
